# simple-vk-renderer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmd/: dconfigure.sh  drun.sh  rconfigure.sh  rrun.sh
logs/: log.txt
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  input_structures.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  tex_image.frag  tex_image.frag.spv
src/: camera.cpp  camera.h  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
